--- a/socket/package.json
+++ b/socket/package.json
@@ -11,6 +11,7 @@
     "firebase-admin": "^9.5.0",
     "serialport": "^9.2.4",
     "socket.io": "^2.4.0",
+    "socket.io-client": "^4.5.0",
     "xbee": "^0.0.4",
     "xbee-api": "^0.6.0"
   },
